--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: todo
+name: myplanner
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   provider: ^4.3.3
   intl: ^0.16.1
+  awesome_dialog: ^1.3.1
+  flutter_launcher_icons: ^0.8.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +36,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
+flutter_icons:
+  android: true 
+  ios: true 
+  image_path: /Assets/Images/planner.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -47,8 +55,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
