--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   provider: ^4.3.3
   intl: ^0.16.1
   awesome_dialog: ^1.3.1
+  expansion_card: ^0.1.0
+  sqflite: ^1.3.2+2
+  
   flutter_launcher_icons: ^0.8.1
 
 
