--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,11 @@ dependencies:
     sdk: flutter
   provider: ^4.3.3
   intl: ^0.16.1
+  splashscreen:
   awesome_dialog: ^1.3.1
   expansion_card: ^0.1.0
   sqflite: ^1.3.2+2
-  
+  curved_navigation_bar: ^0.3.7
   flutter_launcher_icons: ^0.8.1
 
 
@@ -44,7 +45,7 @@ dev_dependencies:
 flutter_icons:
   android: true 
   ios: true 
-  image_path: /Assets/Images/planner.png
+  image_path: ///Images/planner.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -59,7 +60,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - Images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
