--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   sqflite: ^1.3.2+2
   curved_navigation_bar: ^0.3.7
   flutter_launcher_icons: ^0.8.1
+  localstorage: ^3.0.6+9
 
 
   # The following adds the Cupertino Icons font to your application.
