--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   splashscreen:
   awesome_dialog: ^1.3.1
   expansion_card: ^0.1.0
+  localstorage: ^3.0.6
+  flutter_local_notifications: ^4.0.0
   sqflite: ^1.3.2+2
   curved_navigation_bar: ^0.3.7
   flutter_launcher_icons: ^0.8.1
-  localstorage: ^3.0.6+9
+  
 
 
   # The following adds the Cupertino Icons font to your application.
